ipc/ipdl/test/ipdl/ok/compositor.ipdl
include protocol content;

sync protocol compositor {
    bridges compositor, content;

child:
    async __delete__();

};
