ipc/ipdl/test/ipdl/error/subprotocolBridges.ipdl
include protocol bridgesSubprotocol;

protocol subprotocolBridges {
    bridges bridgesSubprotocol, bridgesSubprotocol;

    manager bridgesSubprotocol;

child: __delete__();
state DEAD: send __delete__;
};
